# anki-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.cursor/skills/anki-cli/: INSTALL.md  INSTALL_zh.md  SKILL.md  SKILL_zh.md  companion-skills.md  known-gaps.md  recipes.md  recipes_zh.md  reference.md  reference_zh.md
.cursor/skills/anki-report/: SKILL.md
.cursor/skills/anki-report/scripts/: collect_data.py
.cursor/skills/shanghai-english-translator/: SKILL.md
.cursor/skills/wenyan-translator/: SKILL.md
ankicli/: __init__.py  __main__.py  cmd_ac.py  cmd_card.py  cmd_config.py  cmd_db.py  cmd_deck.py  cmd_export.py  cmd_import.py  cmd_lang.py  cmd_media.py  cmd_note.py  cmd_notetype.py  cmd_review.py  cmd_revlog.py  cmd_scheduler.py  cmd_search.py  cmd_stats.py  cmd_sync.py  cmd_tag.py  config.py  connection.py  i18n.py  main.py  output.py
docs/: AnkiCLI功能介绍与操作指南.md  协作开发指南.md
