[project]
name = "anki-cli"
version = "0.1.0"
description = "Full command-line interface for Anki — operate your collection from the terminal."
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
dependencies = [
    "anki",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
anki-cli = "ankicli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ankicli"]
